# pxe

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gdlintrc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  format.sh  run_iwyu.sh
cmake/: pxe_game.cmake
include/pxe/: app.hpp  events.hpp  main.hpp  math.hpp  result.hpp  settings.hpp  types.hpp
include/pxe/components/: audio_slider.hpp  button.hpp  checkbox.hpp  component.hpp  label.hpp  quick_bar.hpp  scroll_text.hpp  sprite.hpp  sprite_anim.hpp  sprite_button.hpp  ui_component.hpp  version_display.hpp  window.hpp
include/pxe/render/: sprite_sheet.hpp  texture.hpp
include/pxe/scenes/: about.hpp  banner.hpp  game_overlay.hpp  license.hpp  menu.hpp  options.hpp  scene.hpp
media/font/Peaberry_Pixel_Font/Peaberry Regular Spacing/: Peaberry.fnt
media/menu/: menu.ftpp  pxe.xcf
resources/sprites/: menu.json
scripts/: release.py  version.py
src/pxe/: app.cpp  math.cpp  raygui.cpp  settings.cpp
src/pxe/components/: audio_slider.cpp  button.cpp  checkbox.cpp  component.cpp  label.cpp  quick_bar.cpp  scroll_text.cpp  sprite.cpp  sprite_anim.cpp  sprite_button.cpp  ui_component.cpp  version_display.cpp  window.cpp
src/pxe/render/: sprite_sheet.cpp  texture.cpp
src/pxe/scenes/: about.cpp  banner.cpp  game_overlay.cpp  license.cpp  menu.cpp  options.cpp  scene.cpp
